syntax = "proto3";

package io.harness.product.ci.engine.proto;

option java_multiple_files = true;
option go_package = "cienginepb";

// Import CI Addon protos since step definitions
// will closely resemble the protobufs there.
import "product/ci/addon/proto/addon.proto";

message Execution {
  repeated Step steps = 1;
}

message PublishArtifactsStep {
  repeated io.harness.product.ci.addon.proto.UploadFile files = 1;
  repeated io.harness.product.ci.addon.proto.BuildPublishImage images = 2;
}

message StepContext {
  int32 num_retries = 1;
  int64 execution_timeout_secs = 2;
}

message RunStep {
  repeated string commands = 1;
  StepContext context = 2;
}

message SaveCacheStep {
  string key = 1;
  repeated string paths = 2;
}

message RestoreCacheStep {
  string key = 1;
  bool fail_if_not_exist = 2;
}

message Step {
  string id = 1;
  string display_name = 2;
  oneof step {
    RunStep run = 3;
    SaveCacheStep save_cache = 4;
    RestoreCacheStep restore_cache = 5;
    PublishArtifactsStep publish_artifacts = 6;
  }
}